--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="WorkBench is Inventory Management ERP system for tenant orchestrations." />
+    <meta name="description" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=switzer@600,800,900,700,400,300,500&display=swap"
+      rel="stylesheet" />
 
     <title>Cuddie</title>
   </head>
