--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       href="https://api.fontshare.com/v2/css?f[]=switzer@600,800,900,700,400,300,500&display=swap"
       rel="stylesheet" />
 
-    <title>Cuddie</title>
+    <title>Cudie</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
