--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     <link rel="apple-touch-icon" href="" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      href="https://api.fontshare.com/v2/css?f[]=switzer@600,800,900,700,400,300,500&display=swap"
-      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 
     <title>SinbadKYC</title>
   </head>
